# todo-list-api

./: .env.example  LICENSE  README.md  docker-compose.yml  dockerfile  pyproject.toml
src/todo_list_api/: config.py  db.py  depends.py  main.py
src/todo_list_api/models/: task.py  user.py
src/todo_list_api/repositories/: task.py  user.py
src/todo_list_api/routers/: task.py  user.py
src/todo_list_api/services/: task.py  user.py
src/todo_list_api/utils/: logger.py  security.py
