[project]
name = "todo-list-api"
version = "0.1.0"
description = ""
authors = [
    {name = "kavlan-dev",email = "kazancevvlad572@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "pydantic[email] (>=2.13.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "todo_list_api", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
